--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "@supabase/supabase-js": "^2.80.0",
     "nuxt": "^4.2.0",
+    "primevue": "^4.4.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "@primevue/nuxt-module": "^4.4.1"
   }
 }
